// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing creation of the Sizing object with default 1`] = `
Object {
  "inherit": Object {
    "borderStyle": "inheritBorder",
    "boxStyle": "inheritBox",
    "font": Object {
      "size": 16,
      "sizepx": "16px",
      "sizerem": "1rem",
      "style": "inherit",
    },
    "rectStyle": "inheritRect",
    "type": "inherit",
  },
  "large": Object {
    "borderStyle": "largeBorder",
    "boxStyle": "largeBox",
    "font": Object {
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1.5rem",
      "style": "large",
    },
    "rectStyle": "largeRect",
    "type": "large",
  },
  "medium": Object {
    "borderStyle": "mediumBorder",
    "boxStyle": "mediumBox",
    "font": Object {
      "size": 16,
      "sizepx": "16px",
      "sizerem": "1rem",
      "style": "medium",
    },
    "rectStyle": "mediumRect",
    "type": "medium",
  },
  "normal": Object {
    "borderStyle": "normalBorder",
    "boxStyle": "normalBox",
    "font": Object {
      "size": 16,
      "sizepx": "16px",
      "sizerem": "1rem",
      "style": "normal",
    },
    "rectStyle": "normalRect",
    "type": "normal",
  },
  "small": Object {
    "borderStyle": "smallBorder",
    "boxStyle": "smallBox",
    "font": Object {
      "size": 12,
      "sizepx": "12px",
      "sizerem": "0.75rem",
      "style": "small",
    },
    "rectStyle": "smallRect",
    "type": "small",
  },
  "xlarge": Object {
    "borderStyle": "xlargeBorder",
    "boxStyle": "xlargeBox",
    "font": Object {
      "size": 32,
      "sizepx": "32px",
      "sizerem": "2rem",
      "style": "xlarge",
    },
    "rectStyle": "xlargeRect",
    "type": "xlarge",
  },
  "xsmall": Object {
    "borderStyle": "xsmallBorder",
    "boxStyle": "xsmallBox",
    "font": Object {
      "size": 8,
      "sizepx": "8px",
      "sizerem": "0.5rem",
      "style": "xsmall",
    },
    "rectStyle": "xsmallRect",
    "type": "xsmall",
  },
  "xxlarge": Object {
    "borderStyle": "xxlargeBorder",
    "boxStyle": "xxlargeBox",
    "font": Object {
      "size": 48,
      "sizepx": "48px",
      "sizerem": "3rem",
      "style": "xxlarge",
    },
    "rectStyle": "xxlargeRect",
    "type": "xxlarge",
  },
  "xxsmall": Object {
    "borderStyle": "xxsmallBorder",
    "boxStyle": "xxsmallBox",
    "font": Object {
      "size": 6,
      "sizepx": "6px",
      "sizerem": "0.375rem",
      "style": "xxsmall",
    },
    "rectStyle": "xxsmallRect",
    "type": "xxsmall",
  },
}
`;

exports[`Testing creation of the Sizing object with size 24 1`] = `
Object {
  "inherit": Object {
    "borderStyle": "inheritBorder",
    "boxStyle": "inheritBox",
    "font": Object {
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1rem",
      "style": "inherit",
    },
    "rectStyle": "inheritRect",
    "type": "inherit",
  },
  "large": Object {
    "borderStyle": "largeBorder",
    "boxStyle": "largeBox",
    "font": Object {
      "size": 32,
      "sizepx": "32px",
      "sizerem": "1.3333333333333333rem",
      "style": "large",
    },
    "rectStyle": "largeRect",
    "type": "large",
  },
  "medium": Object {
    "borderStyle": "mediumBorder",
    "boxStyle": "mediumBox",
    "font": Object {
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1rem",
      "style": "medium",
    },
    "rectStyle": "mediumRect",
    "type": "medium",
  },
  "normal": Object {
    "borderStyle": "normalBorder",
    "boxStyle": "normalBox",
    "font": Object {
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1rem",
      "style": "normal",
    },
    "rectStyle": "normalRect",
    "type": "normal",
  },
  "small": Object {
    "borderStyle": "smallBorder",
    "boxStyle": "smallBox",
    "font": Object {
      "size": 20,
      "sizepx": "20px",
      "sizerem": "0.8333333333333334rem",
      "style": "small",
    },
    "rectStyle": "smallRect",
    "type": "small",
  },
  "xlarge": Object {
    "borderStyle": "xlargeBorder",
    "boxStyle": "xlargeBox",
    "font": Object {
      "size": 40,
      "sizepx": "40px",
      "sizerem": "1.6666666666666667rem",
      "style": "xlarge",
    },
    "rectStyle": "xlargeRect",
    "type": "xlarge",
  },
  "xsmall": Object {
    "borderStyle": "xsmallBorder",
    "boxStyle": "xsmallBox",
    "font": Object {
      "size": 16,
      "sizepx": "16px",
      "sizerem": "0.6666666666666666rem",
      "style": "xsmall",
    },
    "rectStyle": "xsmallRect",
    "type": "xsmall",
  },
  "xxlarge": Object {
    "borderStyle": "xxlargeBorder",
    "boxStyle": "xxlargeBox",
    "font": Object {
      "size": 56,
      "sizepx": "56px",
      "sizerem": "2.3333333333333335rem",
      "style": "xxlarge",
    },
    "rectStyle": "xxlargeRect",
    "type": "xxlarge",
  },
  "xxsmall": Object {
    "borderStyle": "xxsmallBorder",
    "boxStyle": "xxsmallBox",
    "font": Object {
      "size": 14,
      "sizepx": "14px",
      "sizerem": "0.5833333333333334rem",
      "style": "xxsmall",
    },
    "rectStyle": "xxsmallRect",
    "type": "xxsmall",
  },
}
`;
